--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
-  text-align: center;
+.container {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.title { 
+    font-size: 80px;
+    color: #fff;
+    animation: flipTitle 2s;
+    }
+    
+    @keyframes flipTitle {
+        from{
+            transform: rotateX(90deg);
+        }
+        to{
+            transform: rotateX(0deg);
+        }
+    }
+    
+    .container_Input {
+        background-color: #9d9a9a;
+        padding: 10px;
+        margin: 34px 0;
+        display: flex;
+        border-radius: 8px;
+        box-shadow: 1px 3px 8px rgba(0,0,0, 0.5);
+    
+    }
+    
+    .container_Input input {
+        background-color: #9d9a9a;
+        border: 0;
+        font-size: 17px;
+        color: #fff;
+        outline: none;
+        margin-right: 8px;
+    }
+    
+    .container_Input input::placeholder{
+        color: #f1f1f1
+    }
+    
+    .button_Search {
+        background-color: #9d9a9a;
+        border: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        transition: transform(0.5s);
+    }
+    
+    .button_Search:hover {
+        transform: scale(1.2);
+    }
+    
+    .main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: #fff;
+        width: 370px;
+        border-radius: 8px;
+    }
+    
+    .main h2 {
+        margin: 16px 0;
+        font-size: 39px;
+    }
+    
+    .main span{
+        margin-bottom: 14px;
+        font-weight: bold;
+    }
+    
+    @media (max-width: 620px) {
+        .title{
+            font-size: 60px;
+        }
+    
+        .main h2{
+            font-size: 28px;
+        }
+    
+        .main{
+            width: 80%;
+            min-height: 250px;
+        }
+    }
